# ansible_k3s_doron_feldman

./: Dockerfile  Dockerfile.agent  Dockerfile.ansible  Dockerfile.app  Dockerfile.deb  Dockerfile.rpm  GRADES.md  Install.md  README.md  READTHIS.md  SUGGESTIONS.md  ansible.cfg  docker-compose.yml  how_to.md  id_ed25519.pub  inventory.ini  node.sh  playbook.yml  run_playbook.sh  task.md
example_app/: example.py  gunicorn_conf.py  pyproject.toml
example_app/src/example/: __init__.py  app.py
example_app/src/example/lib/: __init__.py  util.py
roles/install/tasks/: main.yml
roles/k3s_install/files/: k3s-killall.sh  k3s-uninstall.sh
roles/k3s_install/tasks/: main.yml
