[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["Silent Mobius <alex@vaiolabs.com>"]
readme = "README.md"
packages = [{include = "example_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
